all positions value shown

--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -143,6 +143,12 @@
 
     </div>
     <div class="divider mt-0" style="margin-bottom: 30px;"></div>
+        <div class="row">
+            <div class="col-md-12">
+                All existing positions value : {{report.all_positions_value|round(1)}} USD
+            </div>
+        </div>
+    <div class="divider mt-0" style="margin-bottom: 30px;"></div>
     <div class="row">
         <div class="col-md-12">
             <div class="main-card mb-3 card">
