--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -23,8 +23,11 @@
             </div>
             <div class="page-title-actions">
                 <div>
-                    <div class="mb-2 mr-2 badge badge-secondary">Last update : {{ report.reported_text }}</div>
+                    <input id="seconds_passed" type="hidden" value="{{seconds_passed}}">
+                    <div  class="mb-2 mr-2 badge badge-secondary">Last update : {{ report.reported_text }}</div>
+                    <div id="connection_state"  class="mb-2 mr-2 badge badge-pill badge-danger">offline</div>
                 </div>
+
 
                 <div>
                     <div class="mb-2 mr-2 badge badge-pill badge-secondary">Last worker : {{
