external mysqlDb used

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -51,7 +51,7 @@
 
                             <td>{{ u.id }}</td>
                             <td>{{ u.email }}</td>
-                            <td>{{ u.reported_connection.replace(microsecond=0) }}</td>
+                            <td>{{ u.reported_connection }}</td>
 
                         </tr>
                         {% endfor %}
