download for package works

--- a/app/templates/userview/download.html
+++ b/app/templates/userview/download.html
@@ -20,6 +20,11 @@
     <div class="column">
 download instructions will be provided here
 
+                                <a href="/station/downloadzip" download >
+                            <i class="nav-link-icon fa fa-home"> </i>
+                            AlgoTrader Package
+                        </a>
+
     </div>
 </div>
 
