--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -170,7 +170,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="/userview/usercandidates">
+                            <a href="/candidates/usercandidates">
                                 <i class="metismenu-icon pe-7s-like"></i>
                                 Candidates
                             </a>
@@ -228,7 +228,7 @@
 <div class="modal fade" id="add_candidate_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
      aria-hidden="true">
     <div class="modal-dialog" role="document">
-        <form action="{{url_for('userview.updatecandidate')}}" method="post">
+        <form action="{{url_for('candidates.updatecandidate')}}" method="post">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Candidate stock</h5>
