--- a/app/templates/candidates/usercandidates.html
+++ b/app/templates/candidates/usercandidates.html
@@ -22,7 +22,6 @@
             Add
             Candidate
         </button>
-
         <div class="ui menu">
             <div class="ui left search item">
                 <div class="ui transparent icon input">
@@ -76,6 +75,41 @@
         </div>
 
     </div>
+
+</div>
+<!-- Modal -->
+    <div class="modal fade" id="add_candidate_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <form action="{{url_for('candidates.updatecandidate')}}" method="post">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Candidate stock</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div>
+                        <div class="form-group">
+                            <label class="form-label" for="txt_ticker">Ticker</label>
+                            <input required id="txt_ticker" name="txt_ticker" type="text" class="form-control"
+                                   placeholder="Enter a ticker ...">
+                        </div>
+                        <div class="form-group">
+                            <label class="form-label" for="txt_description">Description</label>
+                            <textarea required class="form-control" name="txt_description" id="txt_description" rows="3"
+                                      placeholder="Enter a description ..."></textarea>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <input type="submit" class="btn btn-primary" value="Submit">
+                </div>
+            </div>
+        </form>
+    </div>
 </div>
 
 <script type="text/javascript">
@@ -92,9 +126,11 @@
                     $('tr.hidden').removeClass('hidden').show();
                 }
             });
+
+            $('.modal-dialog').parent().on('show.bs.modal', function(e){        $(e.relatedTarget.attributes['data-target'].value).appendTo('body'); })
  })
 
-
-
 </script>
+<script type="text/javascript" src="{{ url_for('static', filename='assets/scripts/usercandidates.js') }}"></script>
+
 {% endblock %}
