--- a/app/templates/candidates/usercandidates.html
+++ b/app/templates/candidates/usercandidates.html
@@ -1,6 +1,11 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
+<style>
+    .modal-backdrop {
+  z-index: -1;
+}
+</style>
 <div class="app-main__inner">
     <div class="app-page-title">
         <div class="page-title-wrapper">
@@ -39,6 +44,7 @@
                 <tr>
                     <th class="sorted descending">Ticker</th>
                     <th></th>
+                    <th></th>
                     <th>Enabled</th>
                     <th>Description</th>
                 </tr>
@@ -53,6 +59,12 @@
                             <button type="submit"><i class="fa fa-trash"></i></button>
                         </form>
 
+                    </td>
+                    <td>
+
+                            <button class="btn_edit"><i class="fa fa-edit"></i></button>
+                            <input type="hidden" class="h_tick" value="{{ m.ticker }}">
+                            <input type="hidden" class="h_desc" value="{{ m.description }}">
                     </td>
                     <td>
                         <form action="{{url_for('candidates.enabledisable')}}" method="post">
@@ -78,7 +90,7 @@
 
 </div>
 <!-- Modal -->
-    <div class="modal fade" id="add_candidate_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    <div class="modal"  id="add_candidate_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
      aria-hidden="true">
     <div class="modal-dialog" role="document">
         <form action="{{url_for('candidates.updatecandidate')}}" method="post">
