--- a/app/templates/admin/registered_users.html
+++ b/app/templates/admin/registered_users.html
@@ -63,6 +63,9 @@
         </div>
     </div>
 
+
+{% endblock %}
+{% block scripting %}
     <script type="text/javascript">
         $(document).ready(function () {
             $('#search-users').keyup(function () {
