--- a/app/templates/macros/check_password.html
+++ b/app/templates/macros/check_password.html
@@ -1,4 +1,5 @@
 {% macro password_check(field, level) %}
+{% block scripting %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/zxcvbn/4.2.0/zxcvbn.js"></script>
 <script>
   $('#submit').attr('disabled', true);
@@ -27,12 +28,13 @@
     }
     // Update the text indicator
     if ($(this).val() !== "") {
-      $(text).html("Strength: " + strength[result.score]); 
+      $(text).html("Strength: " + strength[result.score]);
     } else {
       $(text).html("");
     }
   });
 </script>
+{% endblock %}
 <style>
   progress {
     /* Reset the default appearance */
@@ -48,7 +50,7 @@
 
   /* Chrome */
   progress::-webkit-progress-value {
-    background: rgba(0, 0, 0, 0.1); 
+    background: rgba(0, 0, 0, 0.1);
   }
 
    /* Webkit based browsers */
