--- a/app/templates/userview/closed_position_info.html
+++ b/app/templates/userview/closed_position_info.html
@@ -31,9 +31,11 @@
     </div>
 
 </div>
+{% endblock %}
+{% block scripting %}
 <script src="https://code.highcharts.com/stock/highstock.js"></script>
 <script src="https://code.highcharts.com/stock/modules/data.js"></script>
 <script src="https://code.highcharts.com/stock/modules/exporting.js"></script>
 <script src="https://code.highcharts.com/stock/modules/export-data.js"></script>
-<script type="text/javascript" src="{{ url_for('static', filename='assets/scripts/closed_position_info.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/closed_position_info.js') }}"></script>
 {% endblock %}
