--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -207,5 +207,7 @@
         </div>
     </div>
 </div>
-<script type="text/javascript" src="{{ url_for('static', filename='assets/scripts/traderstation.js') }}"></script>
+{% endblock %}
+{% block scripting %}
+<script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/traderstation.js') }}"></script>
 {% endblock %}
