more order in js css

--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -18,9 +18,9 @@
     <meta name="description" content="Algotrader server dashboard">
     <meta name="msapplication-tap-highlight" content="no">
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/main.css') }}">
-    <link href="{{ url_for('static', filename='styles/app.scss') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/app.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/arch_ui.css') }}">
+    <link href="{{ url_for('static', filename='styles/base_app.scss') }}">
+<!--    <link rel="stylesheet" href="{{ url_for('static', filename='styles/app.css') }}">-->
 
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/semantic.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='font-icons/css/pe-icon-7-stroke.css') }}">
@@ -249,8 +249,8 @@
 {% endif %}
 
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/packages/jquery.min.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('static', filename='scripts/packages/main.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('static', filename='scripts/packages/app.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='scripts/packages/arch_ui.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='scripts/packages/base_app.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/packages/semantic.min.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/packages/tablesort.min.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/packages/zxcvbn.js') }}"></script>
