--- a/app/templates/admin/market_data.html
+++ b/app/templates/admin/market_data.html
@@ -73,7 +73,10 @@
     </div>
 </div>
 
-<script type="text/javascript">
+{% endblock %}
+
+{% block scripting %}
+    <script type="text/javascript">
         $(document).ready(function () {
             $('#search-users').keyup(function () {
                 var searchText = $(this).val();
@@ -95,7 +98,5 @@
                 }
             });
         });
-
-
-</script>
+    </script>
 {% endblock %}
