--- a/app/templates/admin/manage_user.html
+++ b/app/templates/admin/manage_user.html
@@ -79,6 +79,10 @@
         </div>
     </div>
 
+
+{% endblock %}
+
+{% block scripting %}
     <script type="text/javascript">
         $('.deletion.checkbox').checkbox({
             onChecked: function() {
