--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -258,6 +258,8 @@
 <!--page specific script includes-->
 {% block scripting %}
 {% endblock %}
+{% block modal %}
+{% endblock %}
 </body>
 </html>
 
