one more column added

--- a/app/templates/admin/market_data.html
+++ b/app/templates/admin/market_data.html
@@ -39,6 +39,7 @@
                     <th>FMP rating</th>
                     <th>FMP score</th>
                     <th>FMP Updated</th>
+                    <th>Updated</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -64,6 +65,7 @@
                     <td>{{ m.fmp_rating }}</td>
                     <td>{{ m.fmp_score }}</td>
                     <td>{{ m.fmp_updated }}</td>
+                    <td>{{ m.updated_server_time }}</td>
 
                 </tr>
                 {% endfor %}
