tracked positions are added to trader station state

--- a/app/templates/userview/download.html
+++ b/app/templates/userview/download.html
@@ -18,12 +18,15 @@
         </div>
     </div>
     <div class="column">
-download instructions will be provided here
+        1. Download and install TWS Trader station. (Gateway can be used - but it have no AutoUpdate feature)<br>
+        <a href="https://www.interactivebrokers.com/en/index.php?f=16040" target="_blank"><i class="nav-link-icon fa fa-download"> </i>Download TWS</a><br>
+        2. Make sure to open API and set port as in the settings, remove precauctious message<br>
 
-                                <a href="/station/downloadzip" download >
-                            <i class="nav-link-icon fa fa-home"> </i>
-                            AlgoTrader Package
-                        </a>
+        3. Install Python 3.9 if needed <br>
+                <a href="https://www.python.org/downloads/release/python-392/" target="_blank"><i class="nav-link-icon fa fa-download"> </i>Python 3.9</a><br>
+        4. Download Algotrader package<br>
+        <a href="/station/downloadzip" download ><i class="nav-link-icon fa fa-download"> </i>AlgoTrader Package</a>
+        5. Unzip where feels good :)<br>
 
     </div>
 </div>
