--- a/app/templates/userview/algotraderSettings.html
+++ b/app/templates/userview/algotraderSettings.html
@@ -58,3 +58,6 @@
     </div>
 </div>
 {% endblock %}
+{% block scripting %}
+<script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/settings.js') }}"></script>
+{% endblock %}
