--- a/app/templates/userview/download.html
+++ b/app/templates/userview/download.html
@@ -18,6 +18,7 @@
         </div>
     </div>
     <div class="column">
+        <h1>Windows algotrader installation</h1>
         1. Download and install TWS Trader station. (Gateway can be used - but it have no AutoUpdate feature)<br>
         <a href="https://www.interactivebrokers.com/en/index.php?f=16040" target="_blank"><i class="nav-link-icon fa fa-download"> </i>Download TWS</a><br>
         2. Make sure to open API and set port as in the settings, remove precauctious message<br>
@@ -25,7 +26,7 @@
         3. Install Python 3.9 if needed <br>
                 <a href="https://www.python.org/downloads/release/python-392/" target="_blank"><i class="nav-link-icon fa fa-download"> </i>Python 3.9</a><br>
         4. Download Algotrader package<br>
-        <a href="/station/downloadzip" download ><i class="nav-link-icon fa fa-download"> </i>AlgoTrader Package</a>
+        <a href="/station/downloadzip" download ><i class="nav-link-icon fa fa-download"> </i>AlgoTrader Package</a><br>
         5. Unzip where feels good :)<br>
 
     </div>
