--- a/app/templates/userview/download.html
+++ b/app/templates/userview/download.html
@@ -28,6 +28,8 @@
         4. Download Algotrader package<br>
         <a href="/station/downloadzip" download ><i class="nav-link-icon fa fa-download"> </i>AlgoTrader Package</a><br>
         5. Unzip where feels good :)<br>
+        6. Go to forder "twsapi" run : installWindows.bat<br>
+        6. Ready! Launch with "play.bat"<br>
 
     </div>
 </div>
