--- a/app/templates/candidates/ticker_info.html
+++ b/app/templates/candidates/ticker_info.html
@@ -5,28 +5,100 @@
     <div class="app-page-title">
         <div class="page-title-wrapper">
             <div class="page-title-heading">
-                <div class="page-title-icon">
-                    <i class="pe-7s-graph1 icon-gradient bg-mean-fruit">
+                <div>
+                    <img src="{{candidate.logo}}" style="height:60px">
                     </i>
                 </div>
-                <div>Ticker Information
-                    <div class="page-title-subheading">All available data on {{candidate.ticker}} .
+                <div>{{candidate.ticker}}
+                    <div class="page-title-subheading">{{candidate.company_name}}
                     </div>
                 </div>
             </div>
+            <div class="page-title-actions">
 
+            </div>
+            <div class="page-title-actions">
+                <div>
+                    <button class="mb-2 mr-2 btn
+                    {% if market_data.tipranks>=user_settings.algo_min_rank %}
+                    btn-success
+                    {% else %}
+                    btn-warning
+                    {% endif %}">Tipranks
+                        <span class="badge badge-pill badge-light">{{market_data.tipranks}}</span>
+                    </button>
+
+                    <div class="mb-2 mr-2 badge badge-pill badge-secondary">Last Update(UTC) :
+                        {{market_data.updated_server_time}}
+                    </div>
+
+
+                </div>
+                <button class="mb-2 mr-2 btn
+                                        {% if 'S' in market_data.fmp_rating %}
+                    btn-success
+                    {% else %}
+                    btn-warning
+                    {% endif %}">FMP......
+                    <span class="badge badge-pill badge-light">{{market_data.fmp_rating}}</span>
+                </button>
+            </div>
+            <div class="page-title-actions">
+                <div>
+                    <div class="mb-2 mr-2 badge badge-info">Go to Yahoo</div>
+                </div>
+
+                <div>
+                    <div class="mb-2 mr-2 badge badge-info">Go Tiprank</div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="column">
-
-<div id="container" style="width:100%; height:400px;"></div>
-        <div>
-            <input type="hidden" id="ticker" value="{{ candidate.ticker }}">
+        <div class="row">
+            <div id="container" style="width:100%; height:400px;"></div>
+            <div>
+                <input type="hidden" id="ticker" value="{{ candidate.ticker }}">
+            </div>
         </div>
+        <div class="divider mt-0" style="margin-bottom: 30px;"></div>
 
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="main-card mb-3 card">
+                    <div class="card-body"><h5 class="card-title">INFO</h5>
+                        <div class="scroll-area-sm">
+                            <div class="scrollbar-container ps--active-y ps">
+                                {{ candidate.full_description }}
+                                <div class="ps__rail-x" style="left: 0px; bottom: -160px;">
+                                    <div class="ps__thumb-x" tabindex="0" style="left: 0px; width: 0px;"></div>
+                                </div>
+                                <div class="ps__rail-y" style="top: 160px; height: 200px; right: 0px;">
+                                    <div class="ps__thumb-y" tabindex="0" style="top: 32px; height: 40px;"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="main-card mb-3 card">
+                    <div class="card-body"><h5 class="card-title">SPECS</h5>
+                        <ul class="list-group">
+                            <li class="list-group-item">Industry:        {{candidate.industry}}</li>
+                            <li class="list-group-item">Exchange:        {{candidate.exchange}}</li>
+                            <li class="list-group-item">P/E:             {{market_data.fmp_pe}}</li>
+                            <li class="list-group-item">Av. daily drop:  {{market_data.yahoo_avdropP}} %</li>
+                            <li class="list-group-item">Av. daily spread:{{market_data.yahoo_avdropP}} %</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 </div>
+
 {% endblock %}
 {% block scripting %}
 <script src="https://code.highcharts.com/stock/highstock.js"></script>
