--- a/app/templates/candidates/ticker_info.html
+++ b/app/templates/candidates/ticker_info.html
@@ -6,7 +6,7 @@
         <div class="page-title-wrapper">
             <div class="page-title-heading">
                 <div>
-                    <img src="{{candidate.logo}}" style="height:60px">
+                    <img src="{{candidate.logo}}" style="height:60px;padding-right: 10px;">
                     </i>
                 </div>
                 <div>{{candidate.ticker}}
@@ -80,6 +80,22 @@
                         </div>
                     </div>
                 </div>
+                <div class="main-card mb-3 card">
+                    <div class="card-body"><h5 class="card-title">WHY</h5>
+                        <div class="scroll-area-sm">
+                            <div class="scrollbar-container ps--active-y ps">
+                                {{ candidate.reason }}
+                                <div class="ps__rail-x" style="left: 0px; bottom: -160px;">
+                                    <div class="ps__thumb-x" tabindex="0" style="left: 0px; width: 0px;"></div>
+                                </div>
+                                <div class="ps__rail-y" style="top: 160px; height: 200px; right: 0px;">
+                                    <div class="ps__thumb-y" tabindex="0" style="top: 32px; height: 40px;"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
             <div class="col-lg-6">
                 <div class="main-card mb-3 card">
