--- a/app/templates/candidates/usercandidates.html
+++ b/app/templates/candidates/usercandidates.html
@@ -20,7 +20,7 @@
     </div>
     <div class="column">
 
-                <button type="button" id="btnAddCandidate" class="btn mr-2 mb-2 btn-primary" >
+        <button type="button" id="btnAddCandidate" class="btn mr-2 mb-2 btn-primary">
             Add
             Candidate
         </button>
@@ -36,8 +36,8 @@
         {# Use overflow-x: scroll so that mobile views don't freak out
         # when the table is too wide #}
         <div style="overflow-x: scroll;">
-                                    <div class="page-title-subheading">User Candidates:
-                    </div>
+            <div class="page-title-subheading">User Candidates:
+            </div>
             <table class="ui searchable sortable unstackable selectable celled table">
                 <thead>
                 <tr>
@@ -55,8 +55,12 @@
                 <tbody>
                 {% for m in candidates | sort(attribute='ticker') %}
                 <tr>
-                    <td><img src="{{ m.logo }}"  width="20" height="20"></td>
-                    <td>{{ m.ticker }}</td>
+                    <td><img src="{{ m.logo }}" width="20" height="20"></td>
+                    <td>
+                        <a href="{{url_for('candidates.info')}}?ticker_to_show={{ m.ticker }}">
+                            {{ m.ticker }}
+                        </a>
+                    </td>
                     <td>
                         <form action="{{url_for('candidates.removecandidate')}}" method="post">
                             <input type="hidden" name="ticker_to_remove" value="{{ m.ticker }}">
@@ -66,9 +70,9 @@
                     </td>
                     <td>
 
-                            <button class="btn_edit"><i class="fa fa-edit"></i></button>
-                            <input type="hidden" class="h_tick" value="{{ m.ticker }}">
-                            <input type="hidden" class="h_reason" value="{{ m.reason }}">
+                        <button class="btn_edit"><i class="fa fa-edit"></i></button>
+                        <input type="hidden" class="h_tick" value="{{ m.ticker }}">
+                        <input type="hidden" class="h_reason" value="{{ m.reason }}">
                     </td>
                     <td>
                         <form action="{{url_for('candidates.enabledisable')}}" method="post">
@@ -76,27 +80,27 @@
                             <input type="checkbox" onChange="this.form.submit()"
                                    {%if m.enabled%}
                                    checked
-                            {% endif %}
+                                   {% endif %}
                             >
 
                         </form>
 
                     </td>
-                    <td><textarea disabled  rows="2" cols="40">{{ m.reason }}</textarea></td>
+                    <td><textarea disabled rows="2" cols="40">{{ m.reason }}</textarea></td>
                     <td>{{ m.company_name }}</td>
                     <td>{{ m.industry }}</td>
-                    <td><textarea disabled  rows="2" cols="40">{{ m.full_description }}</textarea>
+                    <td><textarea disabled rows="2" cols="40">{{ m.full_description }}</textarea>
 
                 </tr>
                 {% endfor %}
                 </tbody>
             </table>
         </div>
-    <div class="divider mt-0" style="margin-bottom: 30px;"></div>
+        <div class="divider mt-0" style="margin-bottom: 30px;"></div>
         {% if admin_candidates|length != 0 %}
-<div style="overflow-x: scroll;">
-                        <div class="page-title-subheading">Admin Candidates enabled:
-                    </div>
+        <div style="overflow-x: scroll;">
+            <div class="page-title-subheading">Admin Candidates enabled:
+            </div>
             <table class="ui searchable sortable unstackable selectable celled table">
                 <thead>
                 <tr>
@@ -111,12 +115,16 @@
                 <tbody>
                 {% for m in admin_candidates | sort(attribute='ticker') %}
                 <tr>
-                    <td><img src="{{ m.logo }}"  width="20" height="20"></td>
-                    <td>{{ m.ticker }}</td>
-                    <td><textarea disabled  rows="2" cols="40">{{ m.reason }}</textarea></td>
+                    <td><img src="{{ m.logo }}" width="20" height="20"></td>
+                    <td>
+                        <a href="{{url_for('candidates.info')}}?ticker_to_show={{ m.ticker }}">
+                            {{ m.ticker }}
+                        </a>
+                    </td>
+                    <td><textarea disabled rows="2" cols="40">{{ m.reason }}</textarea></td>
                     <td>{{ m.company_name }}</td>
                     <td>{{ m.industry }}</td>
-                    <td><textarea disabled  rows="2" cols="40">{{ m.full_description }}</textarea>
+                    <td><textarea disabled rows="2" cols="40">{{ m.full_description }}</textarea>
                     </td>
 
                 </tr>
@@ -132,7 +140,8 @@
 
 {% block modal %}
 <!-- Modal -->
-    <div class="modal" id="add_candidate_modal" data-backdrop="static" data-keyboard="false" role="dialog" aria-labelledby="exampleModalLabel"
+<div class="modal" id="add_candidate_modal" data-backdrop="static" data-keyboard="false" role="dialog"
+     aria-labelledby="exampleModalLabel"
      aria-hidden="true">
     <div class="modal-dialog" role="document">
         <form action="{{url_for('candidates.updatecandidate')}}" method="post">
@@ -157,29 +166,33 @@
                         </div>
                         <div class="form-group">
                             <label class="form-label" for="txt_company_name">Name</label>
-                                <input required id="txt_company_name" name="txt_company_name" type="text" class="form-control">
+                            <input required id="txt_company_name" name="txt_company_name" type="text"
+                                   class="form-control">
                         </div>
                         <div class="form-group">
                             <label class="form-label" for="txt_company_description">Description</label>
-                            <textarea required class="form-control" name="txt_company_description" id="txt_company_description" rows="3"></textarea>
+                            <textarea required class="form-control" name="txt_company_description"
+                                      id="txt_company_description" rows="3"></textarea>
                         </div>
                         <div class="form-group">
                             <label class="form-label" for="txt_exchange">Exchange</label>
-                                <input required id="txt_exchange" name="txt_exchange" type="text" class="form-control">
+                            <input required id="txt_exchange" name="txt_exchange" type="text" class="form-control">
                         </div>
                         <div class="form-group">
                             <label class="form-label" for="txt_industry">Industry</label>
-                                <input required id="txt_industry" name="txt_industry" type="text" class="form-control">
+                            <input required id="txt_industry" name="txt_industry" type="text" class="form-control">
                         </div>
                         <div class="form-group">
                             <label class="form-label" for="txt_logo">Logo URL</label>
-                                <input required id="txt_logo" name="txt_logo" type="text" class="form-control">
+                            <input required id="txt_logo" name="txt_logo" type="text" class="form-control">
                         </div>
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" onclick="m.hide()" data-dismiss="modal">Close</button>
-                    <input type="submit" title="Validate to Submit" class="btn btn-primary" disabled id="btn_submit" value="Submit">
+                    <button type="button" class="btn btn-secondary" onclick="m.hide()" data-dismiss="modal">Close
+                    </button>
+                    <input type="submit" title="Validate to Submit" class="btn btn-primary" disabled id="btn_submit"
+                           value="Submit">
                 </div>
             </div>
         </form>
